// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products feature pages CreateProductPage should match snapshot 1`] = `
<div>
  <div>
    <p
      class="text-3xl text-center mb-8"
    >
      Create Product
    </p>
    <form
      class="flex flex-col gap-4 bg-white p-3"
    >
      <div
        class="flex flex-col gap-1 w-full"
      >
        <label
          for="name"
        >
          Name
        </label>
        <input
          class="sc-23ee340d-0 sc-23ee340d-1 cwYaeo jqzeAh"
          data-testid="name"
          id="name"
          name="name"
          value=""
        />
      </div>
      <div
        class="flex flex-col gap-1 w-full"
      >
        <label
          for="description"
        >
          Description
        </label>
        <input
          class="sc-23ee340d-0 sc-23ee340d-1 cwYaeo jqzeAh"
          data-testid="description"
          id="description"
          name="description"
          value=""
        />
      </div>
      <button
        class="sc-7d679c72-0 sc-7d679c72-1 zDViG iTQhfb w-fit"
        data-testid="submit-btn"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;

exports[`Products feature pages ProductInfoPage should match snapshot 1`] = `
<div>
  <div>
    <p
      class="text-3xl text-center mb-8"
    >
      Product
    </p>
    <form
      class="flex flex-col gap-4 bg-white p-3"
    >
      <div
        class="flex flex-col gap-1 w-full"
      >
        <label
          for="name"
        >
          Name
        </label>
        <input
          class="sc-23ee340d-0 sc-23ee340d-1 cwYaeo jqzeAh"
          data-testid="name"
          id="name"
          name="name"
          value="Product A"
        />
      </div>
      <div
        class="flex flex-col gap-1 w-full"
      >
        <label
          for="description"
        >
          Description
        </label>
        <input
          class="sc-23ee340d-0 sc-23ee340d-1 cwYaeo jqzeAh"
          data-testid="description"
          id="description"
          name="description"
          value="Description of Product A"
        />
      </div>
      <div
        class="flex gap-4"
      >
        <button
          class="sc-7d679c72-0 sc-7d679c72-1 gkXiWL iTQhfb w-fit"
          data-testid="update-btn"
          disabled=""
          type="submit"
        >
          Update
        </button>
        <button
          class="sc-7d679c72-0 sc-7d679c72-1 zDViG iTQhfb w-fit"
          data-testid="delete-btn"
          type="button"
        >
          Delete
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Products feature pages ProductPage - displays all products should match snapshot 1`] = `
<div>
  <div>
    <div>
      <p
        class="text-3xl text-center"
      >
        Products
      </p>
      <div
        class="flex gap-8 bg-white w-full p-5 mt-3"
      >
        <input
          class="sc-23ee340d-0 cwYaeo border-0 text-lg"
          placeholder="Search"
          value=""
        />
        <button
          class="sc-7d679c72-0 sc-7d679c72-1 zDViG iTQhfb"
        >
          <p
            class="text-xl"
          >
            +
          </p>
        </button>
      </div>
    </div>
    <table
      class="w-full mt-3 bg-white"
    >
      <thead>
        <tr>
          <th
            class="py-5"
          >
            Name
          </th>
          <th
            class="py-5"
          >
            Description
          </th>
          <th
            class="py-5"
          >
            Created At
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
